--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "i-love-my-city-ejs",
   "version": "1.0.0",
   "description": "iLoveMyCity application using EJS Template",
-  "main": "node app.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "edureka",
